added the rank page; modified a few elements on the index page

--- a/miniprogram/pages/donation/donation.wxml
+++ b/miniprogram/pages/donation/donation.wxml
@@ -47,7 +47,7 @@
 			</view>
 			<view class="padding-xl bg-white-yellow">
         <!-- show certificate -->
-				<text > 感谢你的好意！你的铲子数量 + 1
+				<text > 感谢你参与中国扶贫基金会发起的“饥饿24小时公益体验活动”，用行动助力贫困受饥儿童改善营养，抗击饥饿。恭喜你获得一把铲子，快去挖掘能量吧！
 				</text>
 			</view>
 		</view>
